--- a/style.css
+++ b/style.css
@@ -140,3 +140,30 @@ label{
   font-size: 18px;
   line-height: 5px;
 }
+
+.close{
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.8;
+  background-color: white;
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before, .close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #333;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
